# vitess-replicator

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
infra/kafka/: run_kafka.sh
infra/vitess/: pf.sh  run_vitess.sh
scripts/: download_vtgate_proto.sh  mysql  setup_vitess.py  vtctldclient
src/: command_line_args.rs  console_stream_producer.rs  main.rs  replication_row_event.rs  table_row_change_json_converter.rs  table_row_deserializer.rs  vitess_clients.rs  vitess_grpc.rs  vitess_schema.rs  vitess_shards.rs  vitess_snapshot.rs  vitess_vstream_listener.rs
