[package]
name = "vitess-iceberg"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tokio = { version = "1.42.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = "0.13"
prost = "0.13"
serde_json = "1.0.140"
clap = { version = "4.5.32", features = ["derive"] }
# rdkafka = { version = "0.28",  features = ["cmake-build"] }
log = "0.4.27"
tracing-log = "0.2.0"
tracing = "0.1.41"
env_logger = "0.11.8"

[build-dependencies]
tonic-build = "0.13"
